--- a/yougotspam/index.html
+++ b/yougotspam/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 </head>
 <body>
-    <style>
+    <style id="popup-styles">
       .container {
         max-height: 600px;
         min-height: 300px;
@@ -35,7 +36,7 @@
         max-width: 100%;
       }
     </style>
-    <div class="container">
+    <div class="container" id="popup-html">
         <div class="page-header">
           <h3>Chromie Pop</h3>
           <p id="status"></p>
@@ -46,8 +47,9 @@
         <div>
           <button class="btn btn-primary" id="changelinks">Change</button>
         </div>
+        <script type="text/javascript">
+          
+        </script>
     </div>
-    <script src="/scripts/jquery.min.js" type="text/javascript"></script>
-    <script src="/scripts/extension.js" type="text/javascript"></script>
 </body>
 </html>
