--- a/yougotspam/index.html
+++ b/yougotspam/index.html
@@ -5,51 +5,52 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 </head>
 <body>
-    <style id="popup-styles">
-      .container {
-        max-height: 600px;
-        min-height: 300px;
-        width: 250px;
-        border: 2px solid rgba(0,0,0,0.3);
-        border-radius: 2px;
-        background: white;
-        z-index: 10000;
-        top: 10px;
-        right: 10px;
-        position: absolute;
-      }
-      body {
-        font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 100%;
-      }
-      #status {
-        /* avoid an excessively wide status text */
-        white-space: pre;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        max-width: 400px;
-      }
-      .patient-list {
-        max-height: 250px;
-        overflow-y: scroll;
-        overflow-x: hidden;
-        max-width: 100%;
-      }
-    </style>
-    <div class="container" id="popup-html">
-        <div class="page-header">
-          <h3>Chromie Pop</h3>
-          <p id="status"></p>
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="text" id="linkstext">
-        </div>
-        <div>
-          <button class="btn btn-primary" id="changelinks">Change</button>
-        </div>
-        <script type="text/javascript">
-          
-        </script>
+  <style id="popup-styles">
+    .container {
+      max-height: 300px;
+      min-height: 100px;
+      width: 300px;
+      border: 1px solid rgba(0,0,0,0.3);
+      border-radius: 2px;
+      background: white;
+      z-index: 10000;
+      top: 10px;
+      right: 10px;
+      position: absolute;
+      padding: none;
+    }
+    body {
+      font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
+      font-size: 100%;
+    }
+    #status {
+      /* avoid an excessively wide status text */
+      white-space: pre;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      max-width: 400px;
+    }
+    #extension-header {
+      background-color: #47cf73;
+      height: 30px;
+      padding-top: 10px;
+    }
+    h3 {
+      color: #F9F8F8;
+      margin-top: 0px;
+      text-align: center;
+    }
+    p {
+      text-align: center;
+    }
+  </style>
+  <div class="container" id="popup-html">
+    <div class="page-header">
+      <div id="extension-header">
+        <h3>Spam Inspector</h3>
+      </div>
+      <p id="status">You have spam!</p>
     </div>
+  </div>
 </body>
 </html>
